--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=finacialTR
+spring.application.name=financialTR
+spring.datasource.username=finance_user
+spring.datasource.password=marcus29
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance_tracker
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.enabled=true
+
