--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=marcus29
 spring.datasource.url=jdbc:postgresql://localhost:5432/finance_tracker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.flyway.enabled=true
-
+senha.secreta=D6PFv3i15F/p2Dp+ZSoALEINiCj0LlxhcBW9QiARfG8=
