--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/finance_tracker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.flyway.enabled=true
 senha.secreta=D6PFv3i15F/p2Dp+ZSoALEINiCj0LlxhcBW9QiARfG8=
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=marcuslopee@gmail.com
+spring.mail.password=kgda tccs lelq vnyt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
