feat: variavel ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ senha.secreta=D6PFv3i15F/p2Dp+ZSoALEINiCj0LlxhcBW9QiARfG8=
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=marcuslopee@gmail.com
-spring.mail.password=kgda tccs lelq vnyt
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
